              use the new methods 'assertHaveRelation()' & 'assertHaveNoRelation()' instead.
            - App :
                * Activities :
                    - The constants 'NARROW', 'FLOATING_TIME' & 'FLOATING' are now deprecated;
                      use 'Activity.FloatingType.*' instead.
                  * Billing :
                    - The class 'views.base.BaseCreation' is deprecated.
        # The model 'creme_core.models.FileRef' get a new optional field "description";
          it's used by the new view which displays all FileRefs (so feel free to fill it).
        # Apps :
            * Persons :
                - The model 'Address' gets new semantic fields (like ZipCodeField) which allow to
                  easily customise things (like the form field, the field printer etc...).
        # Javascript:
            * FormDialog:
                - Form submit error responses with HTML can either replace the default overlay content or the frame content.
                - New creme.dialog.Frame option 'fillOnError'; if enabled the html error response replaces the content.
                - New creme.dialog.Dialog option 'fillFrameOnError'; if enabled the html error response replaces the content.

    Breaking changes :
    ------------------
        # Deprecated stuffs which have been removed :
            - In 'creme_core.gui' :
                - In 'field_printers', the function 'image_size()' & the constants MAX_HEIGHT/MAX_WIDTH has been removed.
                - In the class 'mass_import.FormRegistry' :
                    - The methods 'get()' & 'is_registered()' have been removed.
                    - The class 'UnregisteredCTypeException' has been removed.
            - In 'creme_core.models' :
                - In the methods 'HeaderFilter.can_view()' & 'creme_core.models.EntityFilter.can_view()',
                  the argument "content_type" has been removed.